Fixed bottom margin in speakers photo list to adjust for word wrapped names on mobile.

--- a/src/Swetugg.Web/Content/swetugg-2016/css/swetugg.css
+++ b/src/Swetugg.Web/Content/swetugg-2016/css/swetugg.css
@@ -524,7 +524,7 @@ footer {
   .photo-collection li {
     width: 80px;
     height: 80px;
-    margin: 10px 10px 20px 10px;
+    margin: 10px 10px 40px 10px;
   }
 }
 @media (max-width: 320px) {
